--- a/jsTraining/index.html
+++ b/jsTraining/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="./oop.js"></script>
+	<script src="./jsthread.js"></script>
+	<!-- <script src="./oop.js"></script> -->
 	<!-- <script src="./script.js"></script> -->
 	<!-- <script src="./object.js"></script> -->
 </head>
